--- a/_posts/gitpage/2024-05-16-first.md
+++ b/_posts/gitpage/2024-05-16-first.md
@@ -5,13 +5,28 @@ categories: git
 layout: post
 ---
 # How to Merge Different Branches
-Firstly, before merging, you need to commit your changes using Git. If you haven't committed, you'll face an error message prompting you to make a commit.  
+Firstly, before merging, you need to commit your changes using Git.  
+If you haven't committed, you'll face an error message prompting you to make a commit.  
 
-Secondly, once you've committed your changes, switch to the branch you want to integrate with another branch by typing `git checkout <your_branch_name>`in the terminal. This command lets you switch to the desired branch.  
+Secondly, once you've committed your changes, switch to the branch you want to integrate with another branch by typing `git checkout <your_branch_name>`in the terminal.  
+This command lets you switch to the desired branch.  
+
 
 Thirdly, to merge another branch into your current branch, use the command `git merge <branch_with_changes_you_want_to_include>`.  
 
-Additionally, I encountered an error related to ownership because I was using WSL. To resolve it, I used the command `sudo chown -R $(whoami) <path>`.  
-Here, sudo stands for "superuser do," chown means "change ownership," and -R stands for "recursive." This command tells the computer to change the ownership of the directory recursively to the current user (whoami).  
 
-However, the same error occurred again, so I used a workaround: `git config --global add safe.directory <your_path>`. This command is not generally recommended, but I was short on time. T^T
+Additionally, I encountered an error related to ownership because I was using WSL.  
+To resolve it, I used the command `sudo chown -R $(whoami) <path>`.  
+<hr>
+
+![ownersip error](/assets/gitimg/ownership_er.png)  
+<hr>
+Here, sudo stands for "superuser do," chown means "change ownership," and -R stands for "recursive."  
+This command tells the computer to change the ownership of the directory recursively to the current user (whoami).  
+
+However, the same error occurred again, so I used a workaround: `git config --global add safe.directory <your_path>`.  
+This command is not generally recommended, but I was short on time. T^T
+
+ah!!  
+If your local content is the final version and you don't mind if the Git save content changes, you can do `git push --force <your repository>`.  
+However, if you have a team, please do this after sufficient discussion.
